# metro_nav-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
base2d_kinematics/: CMakeLists.txt  package.xml
base2d_kinematics/include/base2d_kinematics/: kinematic_parameters.hpp  noise_model.hpp
base2d_kinematics/src/: kinematics_publisher.cpp  noise_model.cpp
base2d_kinematics_msgs/: CHANGELOG.rst  package.xml
base2d_kinematics_msgs/msg/: Base2DKinematics.msg
debian/: changelog  control  copyright  gbp.conf  rules
include/kinematics_2d/: kinematic_parameters.hpp  noise_model.hpp
kinematics_2d/src/: noise_model.cpp
kinematics_2d_msgs/: CMakeLists.txt  package.xml
rpm/: ros-humble-base2d-kinematics-msgs.spec  ros-humble-kinematics-2d-msgs.spec  ros-humble-kinematics-2d.spec  template.spec
src/: kinematic_parameters.cpp  kinematics_publisher.cpp
